<resources>
    <string name="app_name">Fragment2</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="pass">Pass</string>
    <string name="counter">Counter :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_value">Enter Value</string>
    <string name="passValue">Pass Value</string>
    <string name="inc">Increase</string>
    <string name="reset">Reset</string>
    <string name="decrement">Decrement</string>
    <string name="value">-</string>
</resources>