<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container_view1"
    android:background="@drawable/fragmentbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAssignment.First_Fragment">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_margin="4dp"
       android:gravity="center"
       >
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="number"
           android:layout_margin="5dp"
           android:id="@+id/etFragment"
           android:hint="@string/enter_value"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/passValue"
           android:text="@string/passValue"
           />
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/constraintLayout">
           <androidx.constraintlayout.widget.Guideline
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               app:layout_constraintGuide_percent=".0"
               android:id="@+id/v_gd_0"/>
           <androidx.constraintlayout.widget.Guideline
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               app:layout_constraintGuide_percent=".34"
               android:id="@+id/v_gd_34"/>
           <androidx.constraintlayout.widget.Guideline
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               app:layout_constraintGuide_percent=".68"
               android:id="@+id/v_gd_68"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/increaseBtn"
               android:text="@string/inc"
               app:layout_constraintTop_toTopOf="@+id/constraintLayout"
               app:layout_constraintEnd_toEndOf="@+id/v_gd_34"
               app:layout_constraintStart_toStartOf="@+id/constraintLayout"
               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/resetBtn"
               android:text="@string/reset"
               app:layout_constraintTop_toTopOf="@+id/constraintLayout"
               app:layout_constraintEnd_toEndOf="@+id/v_gd_68"
               app:layout_constraintStart_toEndOf="@+id/increaseBtn"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/decrementBtn"
               android:text="@string/decrement"
               app:layout_constraintTop_toTopOf="@+id/constraintLayout"
               app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
               app:layout_constraintStart_toEndOf="@+id/resetBtn"/>
       </androidx.constraintlayout.widget.ConstraintLayout>
   </LinearLayout>

</FrameLayout>